[tool.poetry]
name = "affiliate-network"
version = "0.1.0"
description = "Web application for working with the Keitaro tracker"
authors = ["ElenaGlu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
aerich = "^0.7.2"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
tortoise-orm = "^0.21.3"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
