[tool.poetry]
name = "affiliate-network"
version = "1"
description = "Web application for working with the Keitaro tracker"
authors = ["ElenaGlu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
tortoise-orm = "^0.21.3"
asyncpg = "^0.29.0"
aerich = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
